--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+header {
+  text-align: center;
+  margin-bottom: 2em;
+}
+
 body {
   font-family: Georgia, serif;
   max-width: 800px;
@@ -21,6 +26,10 @@ nav a {
 
 nav a:hover {
   text-decoration: underline;
+}
+
+nav a:visited {
+  color: #831122; /* couleur après visite */
 }
 
 h1, h2 {
